src/test/deca/context/valid/created/null-return.deca
class A{
	
}
class B{
	A fonction(A a){
		return null;
	}
}
{
	
}
