src/test/deca/context/invalid/created/function-in-main.deca
{
	int fonction(int a){
		return a;
	}
}